tests/invalid_programs/types/mismatched_primitive_type.duck
fun x(y: String) {
}

fun main() {
    x(5);
}
